Changed "Display simple progress bar" to more useful "Open a download monitor window" option in general settings dialog.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@9433 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Languages/default-af.xml
+++ b/Languages/default-af.xml
@@ -3457,7 +3457,7 @@
 			<control caption="bits/sekonde|bytes/sekonde|b/s|B/s|Kb/s|KB/s|Mb/s|MB/s"/>
 			<control caption="_Aflaaie:"/>
 			<control caption="Vou nuwe aflaaie normaalweg uit"/>
-			<control caption="Gebruik eenvoudige vorderingsbalk"/>
+			<control caption="Open 'n aflaai_monitor venster"/>
 			<control caption="_Soek:"/>
 			<control caption="Vou multi-bron aflaaie normaalweg uit"/>
 			<control caption="Verander na Oordragte aansig as aflaai"/>
