--- a/Languages/default-ar.xml
+++ b/Languages/default-ar.xml
@@ -3450,7 +3450,7 @@
 			<control caption="بت/ثانية|بايت/ثانية|بت/ث|ب/ث|كبت/ث|كب/ث|مبت/ث|مب/ث"/>
 			<control caption=":_التحميلات"/>
 			<control caption="توسيع التحميلات الجديدة إفتراضيا"/>
-			<control caption="عرض شريط تقدم بسيط"/>
+			<control caption="شاشة التحميل _افتح نافذة "/>
 			<control caption="_بحث:"/>
 			<control caption="توسيع الملفات المتعددة المصادر إفتراضيا"/>
 			<control caption="التبديل إلى عرض عمليات النقل مع التحميل"/>
