--- a/Languages/default-sr.xml
+++ b/Languages/default-sr.xml
@@ -3448,7 +3448,7 @@
 			<control caption="bitova na sekundu|bajtova na sekundu|b/s|B/s|Kb/s|KB/s|Mb/s|MB/s"/>
 			<control caption="Ski_danje:"/>
 			<control caption="Uvek raširi nova skidanja"/>
-			<control caption="Pokaži jednostavni pokazivač napretka"/>
+			<control caption="Otvori prozor skidanja"/>
 			<control caption="Traži:"/>
 			<control caption="Uvek pokaži sve izvore"/>
 			<control caption="Prebaci na Razmenu kad krenem da skidam"/>
