Excluded fuzzy and ill-formated translations from language files ("Quality is better than quantity").
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@9474 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Languages/default-af.po
+++ b/Languages/default-af.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Shareaza\n"
-"Report-Msgid-Bugs-To: ryo-oh-ki <ryo-oh-ki@narod.ru>\n"
-"POT-Creation-Date: 2014-06-09 06:02+0000\n"
+"Report-Msgid-Bugs-To: shareaza <shareaza@cherubicsoft.com>\n"
+"POT-Creation-Date: 2014-08-03 12:40+0000\n"
 "PO-Revision-Date: \n"
 "Last-Translator: ryo-oh-ki <ryo-oh-ki@narod.ru>\n"
 "Language-Team: Shareaza Development Team\n"
