--- a/Languages/default-ru.xml
+++ b/Languages/default-ru.xml
@@ -3323,7 +3323,7 @@
 		<string id="18510" value="Вы уверены, что хотите предположить, что эта загрузка полна, и повторно её проверить?  Будет рассмотрен весь файл, и Shareaza примет только те части, которые пройдут проверку. Другие же части будут загружены заново."/>
 		<string id="18511" value="Вы внесли изменения в размер файла.  Уверены, что хотите изменить размер для этой загрузки?"/>
 		<string id="18512" value="Вы уверены что хотите отменить загрузку с сохранением неполных файлов?"/>
-		<string id="18513" value="Вы ввели неправильное значение eDonkey хеша.  Проверьте и попробуйте снова."/>
+		<string id="18513" value="Вы ввели неправильное значение %s хеша.  Перепроверьте и попробуйте снова."/>
 		<string id="18514" value="Вы ввели значение %s хеша, не совпадающее с текущим значением у загрузки. Уверены, что хотите изменить%s хеш сейчас?"/>
 		<string id="18515" value="Над выбранной загрузкой уже выполняется операция, попытайтесь снова чуть позже."/>
 		<string id="19000" value="Удаленный доступ отключен."/>
@@ -3953,7 +3953,7 @@
 			<control/>
 			<control/>
 			<control caption="_Личные данные:"/>
-			<control caption="|Мужской|Женский"/>
+			<control caption="Мужской|Женский"/>
 			<control caption="Пол:"/>
 			<control/>
 			<control caption="Возраст:"/>
@@ -4097,7 +4097,7 @@
 			<control caption="Адрес службы:"/>
 			<control/>
 			<control caption="Тип ресурса соединений:"/>
-			<control caption="Gnutella Bootstrap|GWebCache|Server.met ссылка|Блокировано"/>
+			<control caption="Gnutella загрузчик|G1 веб-кеш|G2 веб-кеш|G1/G2 веб-кеш|Server.met ссылка|Блокировано"/>
 			<control caption="OK"/>
 			<control caption="Отмена"/>
 		</dialog>
@@ -4287,7 +4287,7 @@
 			<control caption="Вы выбрали %lu файл(а/ов) для экспорта как Shareaza-поддерживаемые ссылки.  Выберите формат ссылок и нажмите «Сохранить»:"/>
 			<control/>
 			<control caption="Вставить:"/>
-			<control caption="Tiger Root|SHA1|MD5|ED2K (CMD4)|Полное имя файла|Имя файла (ссылка)|Имя файла|Расширение файла|Размер файла|Размер файла (в байтах)|Путь к папке|Локальный адрес|Локальный порт"/>
+			<control caption="Tiger Root|SHA1|MD5|ED2K (CMD4)|BitTorrent|Полное имя файла|Имя файла (URI)|Имя файла|Расширение файла|Размер файла|Размер файла (в байтах)|Путь к папке|Локальный адрес|Локальный порт|Ссылка|Ссылка (URI)"/>
 			<control caption="Шаблоны:"/>
 			<control caption="Magnet|eDonkey|Magnet HTML|eDonkey HTML"/>
 			<control caption="_Копировать"/>
