--- a/MiniUPnPc/miniupnpc/Changelog.txt
+++ b/MiniUPnPc/miniupnpc/Changelog.txt
@@ -1,5 +1,20 @@
-$Id: Changelog.txt,v 1.197 2014/09/06 08:31:39 nanard Exp $
+$Id: Changelog.txt,v 1.201 2014/11/17 09:41:32 nanard Exp $
 miniUPnP client Changelog.
+
+2014/11/17:
+  search all :
+    upnpDiscoverDevices() / upnpDiscoverAll() functions
+    listdevices executable
+  increment API_VERSION to 12
+
+2014/11/13:
+  increment API_VERSION to 11
+
+2014/11/05:
+  simplified function GetUPNPUrls()
+
+2014/09/11:
+  use remoteHost arg of DeletePortMapping
 
 2014/09/06:
   Fix python3 build
